--- a/src/styles/_contactStyle.scss
+++ b/src/styles/_contactStyle.scss
@@ -146,7 +146,7 @@ $b64 : "https://image.flaticon.com/icons/png/128/109/109617.png";
 
 .footer {
   position: absolute;
-top: 1853px;
+top: 1851px;
   width: 100%;
   height: 9em;
   // padding-left: 2em;
@@ -366,6 +366,7 @@ top: 1853px;
 @media only screen and (max-width: 699px) {
   .footer {
     height: 11em;
-    top: 4477px;
+    top: 4476px;
 }
 }
+
