--- a/src/styles/_projectsStyle.scss
+++ b/src/styles/_projectsStyle.scss
@@ -4,22 +4,20 @@
   url('fonts/Mukta/Mukta-Regular.woff') format('woff'),
     url('fonts/Mukta/Mukta-Regular.ttf') format('truetype');
   font-style: normal;
-  font-weight: 200
+  font-weight: 200;
 }
 
-$secondaryFont : 'Mukta',
-sans-serif;
+$secondaryFont : 'Mukta', sans-serif;
 
 @font-face {
   font-family: 'Varela Round';
   src: url('fonts/Varela_Round/VarelaRound-Regular.ttf'),
     url('fonts/Varela_Round/VarelaRound-Regular.ttf') format('truetype');
   font-style: normal;
-  font-weight: 300
+  font-weight: 300;
 }
 
-$primaryFont : 'Varela Round',
-sans-serif;
+$primaryFont : 'Varela Round',sans-serif;
 
 @mixin flexCenter {
   display: flex;
@@ -46,7 +44,7 @@ $secondaryColour : #38509a;
     @include flexCenter();
   width: 100%;
   height: 30em;
-  top: 1373px;
+  top: 1371px;
   background:#12130F;
   position: absolute;
   display: grid;
@@ -433,7 +431,7 @@ padding-top: 4em;
     margin-bottom: 1em;
   }
 .project-holder {
-     top: 2749px;
+     top: 2748px;
   height: 108em;
 
 }
